# task-rs

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml
crates/task-rs/: Cargo.toml
crates/task-rs/src/: lib.rs
crates/task-rs/src/color/: dark.rs  light.rs  mod.rs
crates/task-rs/src/components/: checkbox_button.rs  controls.rs  header.rs  indented_button.rs  mod.rs  sidebar.rs  tag_list.rs  task_item.rs  task_list.rs  task_status_filter.rs  theme.rs  theme_switcher.rs
crates/task-rs/src/components/button_list/: controls.rs  mod.rs
crates/task-rs/src/components/main/: message.rs  mod.rs  refresh.rs  update.rs  view.rs
crates/task-rs/src/components/tag_filter_method/: controls.rs  mod.rs
crates/task-rs/src/components/task_item/: from_task_ref.rs  message.rs  mod.rs  status_accumulation.rs  tag_accumulation.rs  view.rs
crates/task-rs/src/components/task_list/: mod.rs  utils.rs
crates/task-rs/src/components/task_status_filter/: button.rs  controls.rs  mod.rs
crates/task-rs/src/components/theme_switcher/: button.rs  controls.rs  message.rs  mod.rs
crates/task-rs/src/config/: mod.rs  source.rs
crates/task-rs/src/config/sync/: mod.rs
crates/task-rs/src/data/: manifest.rs  mod.rs  status.rs  tag.rs  task.rs
crates/task-rs/src/desktop/: mod.rs
crates/task-rs/src/mvc/: mod.rs
crates/task-rs/src/sizes/: indent_square.rs  main.rs  mod.rs  sidebar.rs
crates/task-rs/src/style/: dark.rs  light.rs  mod.rs  theme.rs
crates/task-rs/src/styling/: dark.rs  light.rs  mod.rs
crates/task-rs/src/utils/: data.rs  default_enum.rs  merge.rs  mod.rs
(+118 files in other folders)
