[package]
name = "task-rs"
description = "TODO app that uses git to sync"
version = "0.0.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/task-rs/task-rs.git"

[dependencies]
smart-default = "^0.6.0"
ron = "^0.6.0"
serde_yaml = "^0.8.12"
structopt = "^0.3.14"
iced = "^0.1.1"

[dependencies.serde]
version = "^1.0.111"
features = ["derive"]
